--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="me.jpg" alt="Edidiong Profile Picture"></td>
+        <td><img src="Images/me.jpg" alt="Edidiong Profile Picture"></td>
         <td><h1>Dare Ekrikpo</h1>
         <p><em>Founder and Ceo of <strong><a href="https://www.appbrewery.co/">Doings</a></strong></em></p>
         <p>I am a Surveyor but soon to be developer</p></td>
